# plectrum

./: Cargo.toml  README.md
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/sqlite/: Cargo.toml  README.md
examples/sqlite/database/: create-db  db.sql
examples/sqlite/src/: main.rs
plectrum/: Cargo.toml
plectrum-derive/: Cargo.toml  README.md
plectrum-derive/src/: lib.rs  transform.rs
plectrum/src/: lib.rs
