[package]
name = "plectrum-derive"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Derive macro for the plectrum crate"
readme = "README.md"
repository = "https://github.com/naiquevin/plectrum"
keywords = ["derive", "macro"]
categories = []

[dependencies]
convert_case = "0.6.0"
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.72"

[lib]
proc-macro = true
