[package]
name = "plectrum"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "An easy way to represent lookup tables in a db as rust enums"
readme = "../README.md"
repository = "https://github.com/naiquevin/plectrum"
keywords = ["lookup-table", "enum"]
categories = ["rust-patterns"]

[dependencies]
plectrum-derive = { version = "0.1.0", path = "../plectrum-derive", optional = true }
sqlx = { version = "0.8.0", optional = true }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }

[features]
derive = ["dep:plectrum-derive"]
sqlx = ["dep:sqlx"]
